# OboeAudioRecorder

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/oboeaudiorecorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OboeAudioRecorder.cpp  OboeAudioRecorder.h  native-lib.cpp
app/src/main/java/com/example/oboeaudiorecorder/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/oboeaudiorecorder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
